fixed
add default photo
