# models/boardModel.js
@@ -10,12 +10,14 @@ const boardSchema = new mongoose.Schema({
         default: null,
     },
     background: {
-        type: String,
-        default: null,
+        enum: ["default", "sakura", "nightMoutains", "greatTree", "newMoon", "leaves", "clouds", "seaSunset", "3d", "mars", "jacht", "aerostatViev", "canyon", "seabed", "aerostat", "starCamping"],
+        laptop: { type: String, default: null },
+        tablet: { type: String, default: null },
+        phone: { type: String, default: null },
     },
     owner: {
         type: mongoose.Schema.Types.ObjectId,
-        ref: 'User',  // Ensure 'User' matches your user model name
+        ref: 'User',  
         required: true,
     },
     columns: [{ type: mongoose.Schema.Types.ObjectId, ref: 'Column' }], 
